2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_reconnect): Added
	newline to reconnect.
	* src/mud-window.c (mud_window_init): Toolbar connect button now opens
	main connection window.

2009-02-16  Les Harris  <lharris@gnome.org>

	* ui/muds.glade: Changed the default port entry value to 23.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connections.c (mud_connections_connect_cb): Connections
	window will now close upon mud connection.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_reconnect): No longer
	free processed buffer in reconnect.
	* src/mud-telnet-handlers.c:
	* src/mud-telnet-msp.c (mud_telnet_msp_parse): Removed logging.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect): Removed
	the free of the processed buffer in disconnect since it is already
	freed by that point with the previous changes.

2009-02-16  Les Harris  <lharris@gnome.org>

	* src/Makefile.am: Removed GMUD_DEBUG variable. The configure script
	should add the debug flags.
	* src/mud-connection-view.c (mud_connection_view_network_event_cb):
	No longer relies on called functions to free the processed buffer.
	* src/mud-connections.c (mud_connections_populate_iconview): Closed
	a memory leak where two GSLists were not freed.
	* src/mud-telnet-handlers.c: Added some debug info.
	* src/mud-telnet-msp.c (mud_telnet_msp_parse): Now properly frees it's
	buffer.
	* src/mud-telnet.[ch] (mud_telnet_process): Simplified how the
	function returns it's processed buffer.  Fixed a corner case where
	MCCP data would try to decompress twice.

2009-02-16  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Update for 0.11.1.

	* configure.ac: Release GNOME-Mud 0.11.1.

2009-02-15  Les Harris  <lharris@gnome.org>
	
	* ui/prefs.glade: Rehid notebook tabs in prefs dialog.
	* src/mud-telnet-mccp.c: Rearranged things a bit to